<resources>
    <string name="app_name">Sunset</string>
    <string name="action_settings">Get Current Location</string>
    <string name="error_title">Oops! Sorry!</string>
    <string name="error_message">There was an error. Please try again</string>
    <string name="error_ok_button_text">OK</string>
    <string name="network_unavailable_message">Network is unavailable</string>
    <string name="no_daily_forecast_data">There is no data to display</string>
    <string name="location"/>
    <string name="menu_refresh">refresh</string>
    <string name="title_activity_settings">Settings</string>


    <string name="canceled">Canceled</string>
    <string name="cancel">Cancel</string>
    <string name="humidity">HUMIDITY</string>
    <string name="rain_snow">RAIN/SNOW</string>
    <string name="getting_current_weather">Getting current weather...</string>
    <string name="hourly">HOURLY</string>
    <string name="_7_daily">7 DAILY</string>
    <string name="dash">--</string>
    <string name="degree">°</string>
    <string name="location_name_not_found">location name not found</string>
    <string name="error_getting_location">error getting location</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings">Settings</string>
    
    <string name="key_units_prefs">temperature_units</string>
    <string-array name="temperature_values">
        <item>Farenheit</item>
        <item>Celsius</item>
    </string-array>
    <string-array name="temperature_titles">
        <item>Farenheit(°F)</item>
        <item>Celsius(°C)</item>
    </string-array>
    
</resources>
